CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT(
        "MPI Project"
        VERSION 1.0.0
        LANGUAGES CXX
)

# Set C++ standard (version) and add compile flags for warnings
SET(CMAKE_CXX_STANDARD 17)
ADD_COMPILE_OPTIONS(-O3 -Wall -Wextra -pedantic)

# Find common libraries sources and add the folder to the include path
FILE(GLOB COMMON_FILES "common/*.cpp")
INCLUDE_DIRECTORIES(common)

OPTION(VERBOSE_FLAG "Enable verbose output" OFF)
IF(VERBOSE_FLAG)
    SET(VERBOSE 1)
ELSE()
    SET(VERBOSE 0)
ENDIF()

# Set the common parameters for the project
SET(PROC_QUANTITY 6)
SET(DEFAULT_ARGUMENTS 100 256 0 res.txt)
SET(MS_ARGUMENTS 100 256 2 0 4 res.txt)

# Add a configuration file to the project
configure_file (
        "${PROJECT_SOURCE_DIR}/common/config.h.in"
        "${PROJECT_BINARY_DIR}/config.h"
)
# Add the binary directory to the include path to link with the generated config.h file
include_directories("${PROJECT_BINARY_DIR}")

# Find MPI & OpenMPI and bind imported targets to a variable
FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(MPI REQUIRED)
SET(IMPORTS MPI::MPI_CXX OpenMP::OpenMP_CXX)

# Vanilla version (MPI 1: Scatterv/Gatherv)
SET(VANILLA_EXECUTABLE Vanilla)
FILE(GLOB VANILLA_SOURCES "${PROJECT_SOURCE_DIR}/vanilla.cpp")
ADD_EXECUTABLE(${VANILLA_EXECUTABLE} ${VANILLA_SOURCES} ${COMMON_FILES})
TARGET_LINK_LIBRARIES(${VANILLA_EXECUTABLE} ${IMPORTS})
ADD_CUSTOM_TARGET(
        run_vanilla
        COMMAND mpirun -np ${PROC_QUANTITY} --oversubscribe ${VANILLA_EXECUTABLE} ${DEFAULT_ARGUMENTS}
        DEPENDS ${VANILLA_EXECUTABLE}
        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)

# Vanilla version with OpenMP
SET(OPENMP_EXECUTABLE OMP)
FILE(GLOB OMP_SOURCES "${PROJECT_SOURCE_DIR}/omp.cpp")
ADD_EXECUTABLE(${OPENMP_EXECUTABLE} ${OMP_SOURCES} ${COMMON_FILES})
TARGET_LINK_LIBRARIES(${OPENMP_EXECUTABLE} ${IMPORTS})
ADD_CUSTOM_TARGET(
        run_omp
        COMMAND mpirun -np ${PROC_QUANTITY} --oversubscribe ${OPENMP_EXECUTABLE} ${DEFAULT_ARGUMENTS}
        DEPENDS ${OPENMP_EXECUTABLE}
        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)

# RMA version (MPI 2: RMA with windows)
SET(RMA_EXECUTABLE RMA)
FILE(GLOB RMA_SOURCES "${PROJECT_SOURCE_DIR}/rma.cpp")
ADD_EXECUTABLE(${RMA_EXECUTABLE} ${RMA_SOURCES} ${COMMON_FILES})
TARGET_LINK_LIBRARIES(${RMA_EXECUTABLE} ${IMPORTS})
ADD_CUSTOM_TARGET(
        run_rma
        COMMAND mpirun -np ${PROC_QUANTITY} --oversubscribe ${RMA_EXECUTABLE} ${DEFAULT_ARGUMENTS}
        DEPENDS ${RMA_EXECUTABLE}
        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)

# RMA version with OpenMP
SET(RMA_OMP_EXECUTABLE RMA_OMP)
FILE(GLOB RMA_OMP_SOURCES "${PROJECT_SOURCE_DIR}/rma_omp.cpp")
ADD_EXECUTABLE(${RMA_OMP_EXECUTABLE} ${RMA_OMP_SOURCES} ${COMMON_FILES})
TARGET_LINK_LIBRARIES(${RMA_OMP_EXECUTABLE} ${IMPORTS})
ADD_CUSTOM_TARGET(
        run_rma_omp
        COMMAND mpirun -np ${PROC_QUANTITY} --oversubscribe ${RMA_OMP_EXECUTABLE} ${DEFAULT_ARGUMENTS}
        DEPENDS ${RMA_OMP_EXECUTABLE}
        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)

# Master/Slave version (MPI 3: Master/Slave)
SET(MS_EXECUTABLE MS_MASTER)
SET(MS_SLAVE MS_SLAVE)
FILE(GLOB MS_MASTER_SOURCES "${PROJECT_SOURCE_DIR}/master_slave/master.cpp")
FILE(GLOB MS_SLAVE_SOURCES "${PROJECT_SOURCE_DIR}/master_slave/slave.cpp")
ADD_EXECUTABLE(${MS_EXECUTABLE} ${MS_MASTER_SOURCES} ${COMMON_FILES})
ADD_EXECUTABLE(${MS_SLAVE} ${MS_SLAVE_SOURCES} ${COMMON_FILES})
TARGET_LINK_LIBRARIES(${MS_EXECUTABLE} ${IMPORTS})
TARGET_LINK_LIBRARIES(${MS_SLAVE} ${IMPORTS})
ADD_CUSTOM_TARGET(
        run_ms
        COMMAND mpirun -np 1 --oversubscribe ${MS_EXECUTABLE} ${MS_ARGUMENTS} ${MS_SLAVE}
        DEPENDS ${MS_EXECUTABLE} ${MS_SLAVE}
        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)

# TODO
# Master/Slave version with OpenMP
#SET(MS_OMP_EXECUTABLE MS_OMP_MASTER)
#SET(MS_OMP_SLAVE MS_OMP_SLAVE)
#FILE(GLOB MS_OMP_MASTER_SOURCES "${PROJECT_SOURCE_DIR}/master_slave_omp/master.cpp")
#FILE(GLOB MS_OMP_SLAVE_SOURCES "${PROJECT_SOURCE_DIR}/master_slave_omp/slave.cpp")
#ADD_EXECUTABLE(${MS_OMP_EXECUTABLE} ${MS_OMP_MASTER_SOURCES} ${COMMON_FILES})
#ADD_EXECUTABLE(${MS_OMP_SLAVE} ${MS_OMP_SLAVE_SOURCES} ${COMMON_FILES})
#TARGET_LINK_LIBRARIES(${MS_OMP_EXECUTABLE} ${IMPORTS})
#TARGET_LINK_LIBRARIES(${MS_OMP_SLAVE} ${IMPORTS})
#ADD_CUSTOM_TARGET(
#        run_ms_omp
#        COMMAND mpirun -np 1 --oversubscribe ${MS_OMP_EXECUTABLE} ${MS_ARGUMENTS} ${MS_OMP_SLAVE}
#        DEPENDS ${MS_OMP_EXECUTABLE} ${MS_OMP_SLAVE}
#        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
#)